--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>Sydney Alexander</strong>
-					<p><br /> Data Analyst well versed in SQL, Python, Tableau<br /><p\>
+					<p><br /> This portfolio is a collection of projects I have worked on to improve my skills in SQL, Tableau, and Python. Check back periodically to see what I have been working on.<br /><p\>
 					<p> <a href="https://www.linkedin.com/in/sydney-alexander-a32a98234">LinkedIn</a></h1><p\>
 				</div>
 			</header>
@@ -29,10 +29,11 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>About Me</h2>
 						</header>
-						<p>This portfolio is a collection of projects I have worked on to improve my skills in SQL, Tableau, and Python. Check back periodically to see what I have been working on.</p>
+						<p>After seven years of teaching high school math, I decided I needed a career change. I wanted to put my math degree to work and combine it with my interest in computers and tech. 
+							That led me to the Google Certification for Data Analysis. From there I have found so many resources and tools to aid me on my journey to becoming a data analyst. 
+						</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
@@ -43,7 +44,7 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/SydneyHAlexander/Portfolio-Projects/commit/6d284093aa4768c8dfa6f78413a8ce2158b78ab2" class="image fit thumb"><img src="images/covid19image.jpg" alt="" /></a>
+								<a href="https://github.com/SydneyHAlexander/Portfolio-Projects/commit/6d284093aa4768c8dfa6f78413a8ce2158b78ab2" target="blank"><img src="images/covid19image.jpg" alt="" /></a>
 								<h3>Data Exploration in SQL</h3>
 								<p>Using SQL, analyzed COVID19 dataset </p>
 							</article>
@@ -53,8 +54,8 @@
 								<p>A dashboard of COVID19 trends</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Python Project Incoming...</h3>
+								<a href="https://github.com/SydneyHAlexander/Portfolio-Projects/blob/main/movie%20correlation%20with%20python.ipynb" class="image fit thumb"><img src="images/moviereel.jpg" alt="" /></a>
+								<h3>Correlation with Python</h3>
 								<p>Correlations of Movie Data</p>
 							
 							</article>
