--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
 								<p>Using SQL, analyzed COVID19 dataset </p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://public.tableau.com/app/profile/sydney.alexander/viz/Covid19DataExploration_16564354042210/Dashboard1" class="image fit thumb"><img src="images/tableaucoviddashboard.png" alt="" /></a>
+								<a href="https://public.tableau.com/app/profile/sydney.alexander/viz/Covid19DataExploration_16564354042210/Dashboard1" target="blank" class="image fit thumb"><img src="images/tableaucoviddashboard.png" alt="" /></a>
 								<h3>Tableau Dashboard</h3>
 								<p>A dashboard of COVID19 trends</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/SydneyHAlexander/Portfolio-Projects/blob/main/movie%20correlation%20with%20python.ipynb" class="image fit thumb"><img src="images/moviereel.jpg" alt="" /></a>
+								<a href="https://github.com/SydneyHAlexander/Portfolio-Projects/blob/main/movie%20correlation%20with%20python.ipynb" target="blank" class="image fit thumb"><img src="images/moviereel.jpg" alt="" /></a>
 								<h3>Correlation with Python</h3>
 								<p>Correlations of Movie Data</p>
 							
