--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/SydneyHAlexander/Portfolio-Projects/commit/6d284093aa4768c8dfa6f78413a8ce2158b78ab2" target="_blank" class="image fit thumb"><img src="images/covid19image.jpg" alt="" /></a>
+								<a href="https://github.com/SydneyHAlexander/Portfolio-Projects/commit/6d284093aa4768c8dfa6f78413a8ce2158b78ab2" class="image fit thumb"><img src="images/covid19image.jpg" alt="" /></a>
 								<h3>Data Exploration in SQL</h3>
 								<p>Using SQL, analyzed COVID19 dataset </p>
 							</article>
