--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
 					<section id="two">
 						<h2>Recent Work</h2>
 						<div class="row">
-							<article class="col-6 col-12-xsmall work-item">
+							<article class="col-6 col-12-xsmall ">
 								<a target="_blank" rel="noopener noreferrer" href="https://github.com/SydneyHAlexander/Portfolio-Projects/commit/6d284093aa4768c8dfa6f78413a8ce2158b78ab2" class="image fit thumb"><img src="images/covid19image.jpg" alt="" /></a>
 								<h3>Data Exploration in SQL</h3>
 								<p>Using SQL, analyzed COVID19 dataset </p>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
+							<article class="col-6 col-12-xsmall ">
 								<a href="https://public.tableau.com/app/profile/sydney.alexander/viz/Covid19DataExploration_16564354042210/Dashboard1" target="_blank" class="image fit thumb"><img src="images/tableaucoviddashboard.png" alt="" /></a>
 								<h3>Tableau Dashboard</h3>
 								<p>A dashboard of COVID19 trends</p>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
+							<article class="col-6 col-12-xsmall ">
 								<a href="https://github.com/SydneyHAlexander/Portfolio-Projects/blob/main/movie%20correlation%20with%20python.ipynb" target="_blank" class="image fit thumb"><img src="images/moviereel.jpg" alt="" /></a>
 								<h3>Correlation with Python</h3>
 								<p>Correlations of Movie Data</p>
