--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall ">
-								<a target="_blank" rel="noopener noreferrer" href="https://github.com/SydneyHAlexander/Portfolio-Projects/commit/6d284093aa4768c8dfa6f78413a8ce2158b78ab2" class="image fit thumb"><img src="images/covid19image.jpg" alt="" /></a>
+								<a href="https://github.com/SydneyHAlexander/Portfolio-Projects/commit/6d284093aa4768c8dfa6f78413a8ce2158b78ab2" class="image fit thumb"><img src="images/covid19image.jpg" alt="" /></a>
 								<h3>Data Exploration in SQL</h3>
 								<p>Using SQL, analyzed COVID19 dataset </p>
 							</article>
 							<article class="col-6 col-12-xsmall ">
-								<a href="https://public.tableau.com/app/profile/sydney.alexander/viz/Covid19DataExploration_16564354042210/Dashboard1" target="_blank" class="image fit thumb"><img src="images/tableaucoviddashboard.png" alt="" /></a>
+								<a href="https://public.tableau.com/app/profile/sydney.alexander/viz/Covid19DataExploration_16564354042210/Dashboard1" target="_blank" rel="noopener noreferrer"><span class="image fit thumb"><img src="images/tableaucoviddashboard.png" alt="" /></span></a>
 								<h3>Tableau Dashboard</h3>
 								<p>A dashboard of COVID19 trends</p>
 							</article>
