--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall ">
-								<a href="https://github.com/SydneyHAlexander/Portfolio-Projects/commit/6d284093aa4768c8dfa6f78413a8ce2158b78ab2" target="_blank" rel="noopener noreferrer"><span class="image fit thumb"><img src="images/covid19image.jpg" alt="" /> <\span></a>
+								<a href="https://github.com/SydneyHAlexander/Portfolio-Projects/commit/6d284093aa4768c8dfa6f78413a8ce2158b78ab2" target="_blank" rel="noopener noreferrer"><span class="image fit thumb"><img src="images/covid19image.jpg" alt="" /> </span></a>
 								<h3>Data Exploration in SQL</h3>
 								<p>Using SQL, analyzed COVID19 dataset </p>
 							</article>
@@ -54,7 +54,7 @@
 								<p>A dashboard of COVID19 trends</p>
 							</article>
 							<article class="col-6 col-12-xsmall ">
-								<a href="https://github.com/SydneyHAlexander/Portfolio-Projects/blob/main/movie%20correlation%20with%20python.ipynb" target="_blank" rel="noopener noreferrer"><span class="image fit thumb"><img src="images/moviereel.jpg" alt="" /> <\span> </a>
+								<a href="https://github.com/SydneyHAlexander/Portfolio-Projects/blob/main/movie%20correlation%20with%20python.ipynb" target="_blank" rel="noopener noreferrer"><span class="image fit thumb"><img src="images/moviereel.jpg" alt="" /> </span> </a>
 								<h3>Correlation with Python</h3>
 								<p>Correlations of Movie Data</p>
 							
