--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
 								<p>Correlations of Movie Data</p>
 							
 							</article>
+							<article class="col-6 col-12-xsmall ">
+								<a href="https://github.com/SydneyHAlexander/sydneyalexander.github.io" target="_blank" rel="noopener noreferrer"></a> <span class="image fit thumb"><img src="images/amazonlogo.jpg" alt="" /></span></a>
+								<h3>Data Scraping with Python</h3>
+								<p>Web Scraping Amazon to create CSV</p>
+							
+							</article>
 						</div>
 						<ul class="actions">
 							<li><a href="#" class="button">Full Portfolio</a></li>
