--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 							
 							</article>
 							<article class="col-6 col-12-xsmall ">
-								<a href="https://github.com/SydneyHAlexander/sydneyalexander.github.io" target="_blank" rel="noopener noreferrer"></a> <span class="image fit thumb"><img src="images/amazonlogo.jpg" alt="" /></span></a>
+								<a href="https://github.com/SydneyHAlexander/Portfolio-Projects/blob/main/Amazon%20Web%20Scraper%20Project.ipynb" target="_blank" rel="noopener noreferrer"></a> <span class="image fit thumb"><img src="images/amazonlogo.jpg" alt="" /></span></a>
 								<h3>Data Scraping with Python</h3>
 								<p>Web Scraping Amazon to create CSV</p>
 							
