--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							That led me to the Google Certification for Data Analysis. From there I have found so many resources and tools to aid me on my journey to becoming a data analyst. 
 						</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="https://docs.google.com/document/d/1DkAN3uTvnn4ZBiID0LYLr3WeI0CAaF4OcDBpjy8Qpd0/edit?usp=sharing" class="button">Resume</a></li>
 						</ul>
 					</section>
 
