--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="pictureofme.png" alt="" /></a>
 					<h1><strong>Sydney Alexander</strong>
 					<p><br /> This portfolio is a collection of projects I have worked on to improve my skills in SQL, Tableau, and Python. Check back periodically to see what I have been working on.<br /><p\>
 					<p> <a href="https://www.linkedin.com/in/sydney-alexander-a32a98234">LinkedIn</a></h1><p\>
