--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
 					<section id="two">
 						<h2>Recent Work</h2>
 						<div class="row">
+							<article class="col-6 col-12-xsmall">
+								<a  href="python.html" target="_blank" rel="noopener noreferrer"><span class="image fit thumb"><img src="images/python.png" alt="" /></span></a>
+								<h3>New Python Projects</h3>
+								<p>A collection of small projects using Python </p>
+							</article>
 							<article class="col-6 col-12-xsmall ">
 								<a href="https://github.com/SydneyHAlexander/Portfolio-Projects/commit/6d284093aa4768c8dfa6f78413a8ce2158b78ab2" target="_blank" rel="noopener noreferrer"><span class="image fit thumb"><img src="images/covid19image.jpg" alt="" /> </span></a>
 								<h3>Data Exploration in SQL</h3>
