--- a/python.html
+++ b/python.html
@@ -47,6 +47,11 @@
 								<h3>Random Trivia Game!</h3>
 								<p>Test your knowledge of random trivia, recieve feedback, and a score! </p>
 							</article>
+							<article class="col-6 col-12-xsmall">
+								<a  href="https://github.com/SydneyHAlexander/Portfolio-Projects/blob/main/pig_latin_generator.py" target="_blank" rel="noopener noreferrer"><span class="image fit thumb"><img src="images/piglatin.jpg" alt="" /></span></a>
+								<h3>Pig Latin Generator</h3>
+								<p>Convert any English sentence into Pig Latin! </p>
+							</article>
 							
 						</div>
 						<ul class="actions">
