--- a/python.html
+++ b/python.html
@@ -52,6 +52,11 @@
 								<h3>Pig Latin Generator</h3>
 								<p>Convert any English sentence into Pig Latin! </p>
 							</article>
+							<article class="col-6 col-12-xsmall">
+								<a  href="https://github.com/SydneyHAlexander/Portfolio-Projects/blob/main/rock_paper_scissors.py" target="_blank" rel="noopener noreferrer"><span class="image fit thumb"><img src="images/rockpaperscissors.jpg" alt="" /></span></a>
+								<h3>Rock, Paper, Scissors</h3>
+								<p>Can you best the computer in this game of chance? </p>
+							</article>
 							
 						</div>
 						<ul class="actions">
