--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 							
 							</article>
 							<article class="col-6 col-12-xsmall ">
-								<a href="https://478364e57ea646b09426a7e9e1466f17.app.rstudio.cloud/file_show?path=%2Fcloud%2Fproject%2FFitBit-Data-Exploration-with-R.html" target="_blank" rel="noopener noreferrer"><span class="image fit thumb"><img src="images/activewomen.jpg" alt="" /> </span></a>
+								<a href="http://rpubs.com/SydneyAlexander072/fitbitinr" target="_blank" rel="noopener noreferrer"><span class="image fit thumb"><img src="images/activewomen.jpg" alt="" /> </span></a>
 								<h3>FitBit Analysis Project with R</h3>
 								<p>An end-to-end project analyzing fitbit data</p>
 							
